Add sbin installation directive

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -51,8 +51,8 @@ ENDIF(BUILD_DBUS_SUPPORT)
 #	ARCHIVE DESTINATION lib
 #	LIBRARY DESTINATION lib)
 
-#INSTALL(TARGETS amdgpufand
-#	RUNTIME DESTINATION sbin)
+INSTALL(TARGETS amdgpufand
+	RUNTIME DESTINATION sbin)
 
 
 
