--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -29,7 +29,7 @@ CHECK_FUNCTION_EXISTS(clock_nanosleep CLOCK_NANOSLEEP)
 IF(NOT CLOCK_NANOSLEEP)
 	FIND_LIBRARY(RT_LIBRARIES rt)
 	target_link_libraries(amdgpufand ${RT_LIBRARIES})
-ENDIF(CLOCK_NANOSLEEP)
+ENDIF(NOT CLOCK_NANOSLEEP)
 
 IF(BUILD_DBUS_SUPPORT)
 	message( FATAL_ERROR "DBUS is not implemented yet" )
